use with a server

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <title>BookLook</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- External styles -->
-    <link rel="stylesheet" type="text/css" media="screen" href="node_modules/@fortawesome/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./@fortawesome/fontawesome-free/css/all.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./bootstrap/dist/css/bootstrap.min.css" />
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -60,8 +60,8 @@
     <!-- Scripts -->
     <!-- External scripts -->
     <script src="https://code.jquery.com/jquery-3.2.1.js "></script>
-    <script src="node_modules/jquery/dist/jquery.min.js "></script>
-    <script src="node_modules/handlebars/dist/handlebars.min.js "></script>
+    <script src="./jquery/dist/jquery.min.js "></script>
+    <script src="./handlebars/dist/handlebars.min.js "></script>
 
     <script src="script.js "></script>
 </body>
